Remove X11 atom

We don't need this anymore since Spectacle is blacklisted from KWin's
close effects.

BUG: 478162
(cherry picked from commit 7f3d8a45e69acd31a3e5dedc0325d7c59ae1a6db)